wip: field label selectors
