# internal/api/netguard/handlers/svcsvc_rule_handler.go
@@ -24,7 +24,7 @@ func NewSvcSvcRuleHandler(service *services.NetguardFacade) *SvcSvcRuleHandler {
 
 // ListSvcSvcRules gets list of SvcSvcRules
 func (h *SvcSvcRuleHandler) ListSvcSvcRules(ctx context.Context, req *netguardpb.ListSvcSvcRulesReq) (*netguardpb.ListSvcSvcRulesResp, error) {
-	scope := h.buildScope(req.Identifiers)
+	scope := h.buildScopeWithOptions(req.Identifiers, req.ListOptions)
 
 	rules, err := h.service.GetSvcSvcRules(ctx, scope)
 	if err != nil {
@@ -65,4 +65,31 @@ func (h *SvcSvcRuleHandler) buildScope(identifiers []*netguardpb.ResourceIdentif
 	}
 
 	return ports.NewResourceIdentifierScope(ids...)
+}
+
+// buildScopeWithOptions creates a scope from resource identifiers and list options
+func (h *SvcSvcRuleHandler) buildScopeWithOptions(identifiers []*netguardpb.ResourceIdentifier, listOpts *netguardpb.ListOptions) ports.Scope {
+	// Extract identifiers
+	var ids []models.ResourceIdentifier
+	if len(identifiers) > 0 {
+		ids = make([]models.ResourceIdentifier, 0, len(identifiers))
+		for _, id := range identifiers {
+			ids = append(ids, converters.ResourceIdentifierFromPB(id))
+		}
+	}
+
+	// Check if we have field or label selectors
+	if listOpts != nil && (len(listOpts.FieldSelectors) > 0 || len(listOpts.LabelSelectors) > 0) {
+		return ports.FieldSelectorScope{
+			Identifiers:    ids,
+			FieldSelectors: listOpts.FieldSelectors,
+			LabelSelectors: listOpts.LabelSelectors,
+		}
+	}
+
+	// Fall back to ResourceIdentifierScope or EmptyScope
+	if len(ids) > 0 {
+		return ports.NewResourceIdentifierScope(ids...)
+	}
+	return ports.EmptyScope{}
 }
